--- a/src/Volvox.Helios.Web/Views/Remembot/EditRecurringReminder.cshtml
+++ b/src/Volvox.Helios.Web/Views/Remembot/EditRecurringReminder.cshtml
@@ -15,6 +15,11 @@
 
 <h2>@ViewData["Title"]</h2>
 
+@if(Model.FaultType != 0)
+{
+    <h4 class="text-danger">@Model.FaultMessage</h4>
+}
+
 <hr />
 <div class="row">
     <div class="col-md-12">
@@ -106,10 +111,11 @@
 
     <script type="text/javascript">
         $(document).ready(function () {
+            var faultType = @Model.FaultType;
             var cronExpression = $("#CronExpression").val();
 
-            if (cronExpression === "") {
-                cronExpression = "* * * * *";
+            if (cronExpression === "" || faultType == true) {
+                cronExpression = "0 * * * *";
             }
 
             $("#easy_cron").cron({
