--- a/src/Volvox.Helios.Web/Views/Remembot/EditRecurringReminder.cshtml
+++ b/src/Volvox.Helios.Web/Views/Remembot/EditRecurringReminder.cshtml
@@ -10,12 +10,13 @@
         ViewData["Title"] = "Edit Reminder";
     }
 }
+
 <link type="text/css" href="~/lib/gentleSelect/jquery-gentleSelect.css" rel="stylesheet" />
-<link type="text/css" href="~/lib/cron/jquery-cron.css" rel="stylesheet"/>
+<link type="text/css" href="~/lib/cron/jquery-cron.css" rel="stylesheet" />
 
 <h2>@ViewData["Title"]</h2>
 
-@if(Model.FaultType != 0)
+@if (Model.FaultType != 0)
 {
     <h4 class="text-danger">@Model.FaultMessage</h4>
 }
@@ -57,7 +58,7 @@
             </div>
             <br />
 
-            <div id="easy_cron" ></div>
+            <div id="easy_cron"></div>
 
             <div id="manual_cron" style="display:none">
                 <h3>Recurrence</h3>
@@ -106,8 +107,16 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    <script src="~/lib/gentleSelect/jquery-gentleSelect-min.js"></script>
-    <script src="~/lib/cron/jquery-cron-min.js"></script>
+    <environment include="Development">
+        <script src="~/lib/gentleSelect/jquery-gentleSelect.js"></script>
+        <script src="~/lib/cron/jquery-cron.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="~/lib/gentleSelect/jquery-gentleSelect-min.js"
+                asp-fallback-src="~/lib/gentleSelect/jquery-gentleSelect.js"></script>
+        <script src="~/lib/cron/jquery-cron-min.js"
+                asp-fallback-src="~/lib/cron/jquery-cron.js"></script>
+    </environment>
 
     <script type="text/javascript">
         $(document).ready(function () {
