--- a/src/Volvox.Helios.Web/Views/Home/About.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/About.cshtml
@@ -72,3 +72,13 @@
     Makes it easy to always know when you have someone streaming on the server! <br>
     At least we know who to watch now.
 </p>
+<hr>
+<h5>Poll Manager</h5>
+<p>
+    Create and manage custom polls.
+</p>
+<hr>
+<h5>Chat Tracker</h5>
+<p>
+    Keeps track of your Guild's chat and provides you with up-to-date analytics.
+</p>
