Added remembot to about page

--- a/src/Volvox.Helios.Web/Views/Home/About.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/About.cshtml
@@ -82,3 +82,8 @@
 <p>
     Keeps track of your Guild's chat and provides you with up-to-date analytics.
 </p>
+<hr/>
+<h5>Remembot</h5>
+<p>
+    Add messages to be sent a intervals you define. Guild member always late for raids? Set a reminder message that pings them in the evening on every Tuesday. Are you manually creating sign up messages every morning? Now there's a bot for that!
+</p>
