--- a/src/Volvox.Helios.Web/Views/Shared/_ManagementLayout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_ManagementLayout.cshtml
@@ -18,7 +18,7 @@
     <environment include="Development">  
         <link rel="stylesheet" href="~/vendor.min.css" />
         <link rel="stylesheet" href="~/css/site.css" />
-        <link rel="stylesheet" href="~/css/sidebar.css" />
+        <link rel="stylesheet" href="~/css/management.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     </environment>
     <environment exclude="Development">
@@ -26,7 +26,7 @@
               asp-fallback-href="~/vendor.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-        <link rel="stylesheet" href="~/css/sidebar.css" />
+        <link rel="stylesheet" href="~/css/management.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     </environment>
     <link rel="icon" type="image/x-icon" href="~/images/volvox.png">
@@ -52,21 +52,42 @@
 
     <partial name="_CookieConsentPartial" />
 
-    <!-- Load in the module -->
+    <div id="wrapper">
 
-    @RenderBody()
+        <!-- We will load server icons here -->
+        <div id="sidebar-wrapper">
+            <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+            <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+            <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+            <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+            <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+            <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+            <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+            <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+            <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+            <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+            <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+            <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+            <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+            <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+            <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
+            
+        </div>
 
-    <!--
-    <main role="main" class="container body-content">
-        
-        
-        <hr />
-        <footer>
+        <!-- Load the current modules here -->
+        <div id="modulebar-wrapper">
+            <a asp-controller="Management" asp-action="StreamRole" class="btn btn-block btn-module" role="button" aria-expanded="false" >Stream Role</a>
+            <a asp-controller="Management" asp-action="StreamAnnouncer" class="btn btn-block btn-module" role="button" aria-expanded="false">Stream Announcer</a>
+        </div>
+
+        <div id="page-content-wrapper">
+            @RenderBody()
+            <br>
+
             <p>&copy; 2018 - Volvox.Helios</p>
-        </footer>
-        
-    </main>
-    -->
+        </div>
+
+    </div>
 
     <environment include="Development">
         <script src="~/vendor.min.js"></script>
