--- a/src/Volvox.Helios.Web/Views/Shared/_ManagementLayout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_ManagementLayout.cshtml
@@ -71,13 +71,16 @@
             <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
             <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
             <img src="~/images/corgi_vector_128.png" alt="Placeholder" width="64" class="rounded-circle server-img" >
-            
+
         </div>
 
         <!-- Load the current modules here -->
         <div id="modulebar-wrapper">
             <a asp-controller="Management" asp-action="StreamRole" class="btn btn-block btn-module" role="button" aria-expanded="false" >Stream Role</a>
             <a asp-controller="Management" asp-action="StreamAnnouncer" class="btn btn-block btn-module" role="button" aria-expanded="false">Stream Announcer</a>
+            <a asp-controller="Management" asp-action="ChatTracker" class="btn btn-block btn-module" role="button" aria-expanded="false">Chat Tracker</a>
+            <a asp-controller="Management" asp-action="Remembot" class="btn btn-block btn-module" role="button" aria-expanded="false">Remembot</a>
+            <a asp-controller="Management" asp-action="PollManager" class="btn btn-block btn-module" role="button" aria-expanded="false">Poll Manager</a>
         </div>
 
         <div id="page-content-wrapper">
