--- a/src/Volvox.Helios.Web/Views/Management/ChatTracker.cshtml
+++ b/src/Volvox.Helios.Web/Views/Management/ChatTracker.cshtml
@@ -7,4 +7,36 @@
 <div class="col-12">
 
     <h5 class="text-center">Chat Tracker</h5>
+
+    <br>
+
+    <div class="card background-dark2">
+        <h5 class="card-header text-center color-disabled">Description</h5>
+        <div class="card-body">
+            <p class="card-text">
+                With this module enabled it will allow you to look at the Analytics functions for your server.
+            </p>
+        </div>
+    </div>
+
+    <br>
+
+    <div class="card background-dark2">
+        <h5 class="card-header text-center color-disabled">Configuration</h5>
+        <div class="card-body">
+            <p class="card-text">
+            
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <label class="form-check-label" for="defaultCheck1">
+                    Enabled
+                </label>
+            </div>
+
+            <button type="button" class="btn btn-info">Save</button>
+
+            </p>
+        </div>
+    </div>
+
 </div>
