--- a/src/Volvox.Helios.Web/Views/Management/Remembot.cshtml
+++ b/src/Volvox.Helios.Web/Views/Management/Remembot.cshtml
@@ -1,6 +1,6 @@
 
 @{
-    ViewData["Title"] = "Chat Tracker Module";
+    ViewData["Title"] = "Remembot Module";
     Layout = "_ManagementLayout";
 }
 
