--- a/src/Volvox.Helios.Web/Views/Settings/UserEventSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/UserEventSettings.cshtml
@@ -1,6 +1,6 @@
 @model Volvox.Helios.Web.ViewModels.Settings.UserEventSettingsViewModel
 @{
-    ViewData["Title"] = "Stream Announcer Settings";
+    ViewData["Title"] = "UserEvent Settings";
 }
 
 <h2>Stream Announcer Settings</h2>
@@ -13,22 +13,22 @@
 
             <div style="display:flex;" class="form-group">
                 <label asp-for="Enabled" class="font-size-small small-margin-right"></label>
-                <label class="switch" />
+                <label class="switch"></label>
                 <input asp-for="Enabled" type="checkbox" />
                 <div class="slider round"></div>
                 <span asp-validation-for="Enabled" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="ChannelId"></label>
-                <select asp-for="ChannelId" asp-items="Model.Channels" id="channels" class="form-control"></select>
-                <span asp-validation-for="ChannelId" class="text-danger"></span>
             </div>
 
             <div class="form-check form-group">
                 <input asp-for="UserLeftEvent" class="form-check-input" />
                 <label asp-for="UserLeftEvent" class="form-check-label"></label>
                 <span asp-validation-for="UserLeftEvent" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="ChannelId"></label>
+                <select asp-for="ChannelId" asp-items="Model.Channels" id="channels" class="form-control"></select>
+                <span asp-validation-for="ChannelId" class="text-danger"></span>
             </div>
 
             <div class="form-group">
