--- a/src/Volvox.Helios.Web/Views/Settings/UserEventSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/UserEventSettings.cshtml
@@ -13,7 +13,7 @@
 
             <div style="display:flex;" class="form-group">
                 <label asp-for="Enabled" class="font-size-small small-margin-right"></label>
-                <label class="switch"></label>
+                <label class="switch"/>
                 <input asp-for="Enabled" type="checkbox" />
                 <div class="slider round"></div>
                 <span asp-validation-for="Enabled" class="text-danger"></span>
