--- a/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamAnnouncerSettings.cshtml
@@ -48,24 +48,24 @@
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
     <script>
-        getChannelSettingsAnnouncer = function (guildId, channelId) {
-            const url = `/api/GetChannelSettingsAnnouncer?guildId=${guildId}&channelId=${channelId}`
+        getChannelSettingsAnnouncer = function(guildId, channelId) {
+            const url = `/api/GetChannelSettingsAnnouncer?guildId=${guildId}&channelId=${channelId}`;
             return $.ajax({
                 type: 'GET',
                 cache: false,
                 url: url
-            }).done(function (response) {
+            }).done(function(response) {
                 return response;
             });
-        }
+        };
 
         $("#channels").on('change', function () {
-            var channelId = $('#channels').val();
-            var guildId = '@Model.GuildId';
+            const channelId = $('#channels').val();
+            const guildId = '@Model.GuildId';
 
             $.when(getChannelSettingsAnnouncer(guildId, channelId)).done(function (response) {
                 $('#ChannelSettings_Enabled').prop('checked', response.enabled);
-                $('#ChannelSettings_RemoveMessages').prop('checked', response.removeMessages)
+                $('#ChannelSettings_RemoveMessages').prop('checked', response.removeMessages);
             });
         });
     </script>
