--- a/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
@@ -1,4 +1,4 @@
-﻿@model Volvox.Helios.Web.ViewModels.Settings.StreamAnnouncerSettingsViewModel
+﻿@model Volvox.Helios.Web.ViewModels.Settings.StreamerSettingsViewModel
 @{
     ViewData["Title"] = "Stream Announcer Settings";
 }
@@ -35,6 +35,14 @@
                 <input asp-for="ChannelSettings.RemoveMessages" class="form-check-input" />
                 <label asp-for="ChannelSettings.RemoveMessages" class="form-check-label"></label>
                 <span asp-validation-for="ChannelSettings.RemoveMessages" class="text-danger"></span>
+            </div>
+
+            <hr />
+
+            <div class="form-group">
+                <label asp-for="RoleId"></label>
+                <select asp-for="RoleId" asp-items="Model.Roles" id="channels" class="form-control"></select>
+                <span asp-validation-for="RoleId" class="text-danger"></span>
             </div>
 
             <div class="form-group">
