Add StreamerModule Add EnableStreamerRole setting Removed old StreamerRole files View title fixes

--- a/src/Volvox.Helios.Web/Views/Settings/ChatTrackerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/ChatTrackerSettings.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Volvox.Helios.Web.ViewModels.Settings.ChatTrackerSettingsViewModel
 @{
-    ViewData["Title"] = "ChatTracker Settings";
+    ViewData["Title"] = "ChatTracker Module Settings";
 }
 
-<h2>Streamer Role Settings</h2>
+<h2>@ViewData["Title"]</h2>
 <hr />
 
 <div class="row">
