--- a/src/Volvox.Helios.Web/Views/Settings/RemembotSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/RemembotSettings.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Volvox.Helios.Web.ViewModels.Settings.ReminderSettingsViewModel
 @{
-    ViewData["Title"] = "Remembot Settings";
+    ViewData["Title"] = "Remembot Module Settings";
 }
 
-<h2>Remembot Settings</h2>
+<h2>@ViewData["Title"]</h2>
 <hr />
 
 <div class="row">
