--- a/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Volvox.Helios.Web.ViewModels.Settings.StreamerSettingsViewModel
 @{
-    ViewData["Title"] = "Stream Announcer Settings";
+    ViewData["Title"] = "Streamer Module Settings";
 }
 
-<h2>Stream Announcer Settings</h2>
+<h2>@ViewData["Title"]</h2>
 <hr />
 
 <div class="row">
@@ -11,7 +11,7 @@
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
 
-            <div style="display:flex;" class="form-group">
+            <div style="display: flex;" class="form-group">
                 <label asp-for="Enabled" class="font-size-small small-margin-right"></label>
                 <label class="switch" />
                 <input asp-for="Enabled" type="checkbox" />
@@ -19,18 +19,17 @@
                 <span asp-validation-for="Enabled" class="text-danger"></span>
             </div>
 
+            <h4>Stream Announcer</h4>
             <div class="form-group">
                 <label asp-for="ChannelId"></label>
                 <select asp-for="ChannelId" asp-items="Model.Channels" id="channels" class="form-control"></select>
                 <span asp-validation-for="ChannelId" class="text-danger"></span>
             </div>
-
             <div class="form-check form-group">
                 <input asp-for="ChannelSettings.Enabled" class="form-check-input" />
                 <label asp-for="ChannelSettings.Enabled" class="form-check-label"></label>
                 <span asp-validation-for="ChannelSettings.Enabled" class="text-danger"></span>
             </div>
-
             <div class="form-check form-group">
                 <input asp-for="ChannelSettings.RemoveMessages" class="form-check-input" />
                 <label asp-for="ChannelSettings.RemoveMessages" class="form-check-label"></label>
@@ -39,9 +38,15 @@
 
             <hr />
 
+            <h4>Streamer Role</h4>
+            <div class="form-check form-group">
+                <input asp-for="StreamerRoleEnabled" class="form-check-input" />
+                <label asp-for="StreamerRoleEnabled" class="form-check-label"></label>
+                <span asp-validation-for="StreamerRoleEnabled" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="RoleId"></label>
-                <select asp-for="RoleId" asp-items="Model.Roles" id="channels" class="form-control"></select>
+                <select asp-for="RoleId" asp-items="Model.Roles" id="roles" class="form-control"></select>
                 <span asp-validation-for="RoleId" class="text-danger"></span>
             </div>
 
@@ -53,7 +58,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 
     <script>
         getChannelSettingsAnnouncer = function(guildId, channelId) {
@@ -67,14 +72,15 @@
             });
         };
 
-        $("#channels").on('change', function () {
-            const channelId = $('#channels').val();
-            const guildId = '@Model.GuildId';
+        $("#channels").on('change',
+            function() {
+                const channelId = $('#channels').val();
+                const guildId = '@Model.GuildId';
 
-            $.when(getChannelSettingsAnnouncer(guildId, channelId)).done(function (response) {
-                $('#ChannelSettings_Enabled').prop('checked', response.enabled);
-                $('#ChannelSettings_RemoveMessages').prop('checked', response.removeMessages);
+                $.when(getChannelSettingsAnnouncer(guildId, channelId)).done(function(response) {
+                    $('#ChannelSettings_Enabled').prop('checked', response.enabled);
+                    $('#ChannelSettings_RemoveMessages').prop('checked', response.removeMessages);
+                });
             });
-        });
     </script>
 }
