Code smell fixes

--- a/src/Volvox.Helios.Web/Views/Shared/Errors/Err404.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/Errors/Err404.cshtml
@@ -5,7 +5,7 @@
 <div id="ErrorContainer" class="vertical-margin-large text-center">
     <i class="vertical-margin-medium font-size-massive far fa-dizzy"></i>
     <br />
-    <b>
+    <strong>
         <label class="font-size-large">
             404
         </label>
@@ -13,6 +13,5 @@
         <label class="vertical-margin-medium font-size-medium">
             Oops! Nothing to see here!
         </label>
-    </b>
+    </strong>
 </div>
-
