--- a/src/Volvox.Helios.Web/Views/Shared/Errors/ErrGeneral.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/Errors/ErrGeneral.cshtml
@@ -1,18 +1,17 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = ViewData["StatusCode"] + " - " + ViewData["StatusDescription"];
 }
 
 <div id="ErrorContainer" class="vertical-margin-large text-center">
     <i class="vertical-margin-medium font-size-massive far fa-frown-open"></i>
     <br />
-    <b>
+    <strong>
         <label class="vertical-margin-medium font-size-small">
             Oh no! There was an error processing your request
         </label>
-    </b>
+    </strong>
     <br />
-    <label 
-           class="font-size-tiny">@ViewData["StatusCode"] - @ViewData["StatusDescription"]
+    <label class="font-size-tiny">
+        @ViewData["StatusCode"] - @ViewData["StatusDescription"]
     </label>
 </div>
