--- a/src/Volvox.Helios.Web/Views/Home/Example.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/Example.cshtml
@@ -2,88 +2,8 @@
     ViewData["Title"] = "Example";
     Layout = "_ManagementLayout";
 }
-
-<div id="wrapper">
-
-    <div id="page-content-wrapper">
-        <div id="accordion">
-
-            <div class="container-content">
-                <div class="accordion-group">
-
-                    <div class="col-12">
-                        <div class="collapse" id="StreamAnnouncer">
-                            <!-- Stream Announcer -->
-                            <h5 class="text-center">Stream Announcer</h5>
-
-                            <br>
-
-                            <div class="card background-dark2">
-                                <h5 class="card-header text-center color-disabled">Description</h5>
-                                <div class="card-body">
-                                    <p class="card-text">
-                                        With this module you are able to announce to a defined text channel when someone on the server goes live on Twitch.
-                                    </p>
-                                </div>
-                            </div>
-
-                            <br>
-
-                            <div class="card background-dark2">
-                                <h5 class="card-header text-center color-disabled">Example</h5>
-                                <div class="card-body">
-                                    <p>Here is an example of what you would see when the Stream Announcer Module is enabled and someone starts a stream.</p>
-
-                                    <img src="~/Images/Examples/StreamAnnouncer.png" width="50%" class="img-center">
-                                </div>
-                            </div>
-
-                            <br>
-
-                            <div class="card background-dark2">
-                                <h5 class="card-header text-center color-disabled">Configuration</h5>
-                                <div class="card-body">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                                        <label class="form-check-label" for="defaultCheck1">
-                                            Enabled
-                                        </label>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="exampleFormControlSelect1">Select text-channel to send the messages to:</label>
-                                        <select class="form-control" id="exampleFormControlSelect1">
-                                        <option>1</option>
-                                        <option>2</option>
-                                        <option>3</option>
-                                        <option>4</option>
-                                        <option>5</option>
-                                        </select>
-                                    </div>
-
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                                        <label class="form-check-label" for="defaultCheck1">
-                                            Delete messages on stream conclusion
-                                        </label>
-                                    </div>
-
-                                    <button type="button" class="btn btn-info">Save</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                <br>
- 
-
-                </div>
-
-            </div>
-
-            <div id="configbar">
-
-            </div>
-        </div>
-    </div>
-</div>
+@section scripts{
+    <environment names="Development">
+        <script src="~/js/demo.ts"></script>
+    </environment>
+}
