--- a/src/Volvox.Helios.Web/Views/Management/Remembot.cshtml
+++ b/src/Volvox.Helios.Web/Views/Management/Remembot.cshtml
@@ -4,8 +4,152 @@
     Layout = "_ManagementLayout";
 }
 
-<div class="col-12">
 
-    <h5 class="text-center">Remembot</h5>
-    <h5 class="italics">Let us send the reminders so you don't have to</h5>
+@model Volvox.Helios.Web.ViewModels.Settings.EditRecurringReminderMessageViewModel
+
+@{
+    if (Model.Id == default(long))
+    {
+        ViewData["Title"] = "Add Reminder";
+    }
+    else
+    {
+        ViewData["Title"] = "Edit Reminder";
+    }
+}
+
+<link type="text/css" href="~/lib/gentleSelect/jquery-gentleSelect.css" rel="stylesheet" />
+<link type="text/css" href="~/lib/cron/jquery-cron.css" rel="stylesheet" />
+
+<h2>@ViewData["Title"]</h2>
+
+@if (Model.FaultType != 0)
+{
+    <h4 class="text-danger">@Model.FaultMessage</h4>
+}
+
+<hr />
+<div class="row">
+    <div class="col-md-12">
+        <form asp-action="EditRecurringReminder">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="form-row">
+                <div style="display:flex;" class="form-group float-right">
+                    <label asp-for="Enabled" class="font-size-small small-margin-right"></label>
+                    <label class="switch" />
+                    <input asp-for="Enabled" type="checkbox" />
+                    <div class="slider round"></div>
+                    <span asp-validation-for="Enabled" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="col-4">
+                    <div class="form-group">
+                        <label asp-for="ChannelId"></label>
+                        <select asp-for="ChannelId" asp-items="Model.Channels" id="channels" class="form-control"></select>
+                        <span asp-validation-for="ChannelId" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="col-12">
+                    <div class="form-group">
+                        <label asp-for="Message" class="control-label"></label>
+                        <textarea asp-for="Message" rows="5" class="form-control"></textarea>
+                        <span asp-validation-for="Message" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+            <br />
+
+            <div id="easy_cron"></div>
+
+            <div id="manual_cron" style="display:none">
+                <h3>Recurrence</h3>
+                <p>This bot uses Cron Expressions to specify recurrences. Check out <a href="https://en.wikipedia.org/wiki/Cron#CRON_expression">this wiki page</a> for more information. All time is based on UTC timezone.</p>
+                <hr />
+
+                <div class="form-row">
+
+                    <div class="col">
+                        <div class="form-group">
+                            <label asp-for="CronExpression" class="control-label"></label>
+                            <input asp-for="CronExpression" class="form-control" />
+                            <span asp-validation-for="CronExpression" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="form-group" style="display:none">
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" class="form-control" />
+            </div>
+            <br /><br />
+            <div class="form-group">
+                <input type="submit" value="Save Reminder" class="btn btn-success" />
+                @if (Model.Id != default(long))
+                {
+                    <input type="button" id="deleteBtn" value="Delete Reminder" class="btn btn-danger" />
+                }
+            </div>
+        </form>
+    </div>
 </div>
+
+<div>
+    <form asp-action="DeleteRecurringReminder" id="deleteForm">
+        <div class="form-group" style="display:none">
+            <label asp-for="Id" class="control-label"></label>
+            <input asp-for="Id" class="form-control" />
+        </div>
+
+    </form>
+    <a asp-action="RemembotSettings" asp-controller="Settings">Back to List</a>
+</div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <environment include="Development">
+        <script src="~/lib/gentleSelect/jquery-gentleSelect.js"></script>
+        <script src="~/lib/cron/jquery-cron.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="~/lib/gentleSelect/jquery-gentleSelect-min.js"
+                asp-fallback-src="~/lib/gentleSelect/jquery-gentleSelect.js"></script>
+        <script src="~/lib/cron/jquery-cron-min.js"
+                asp-fallback-src="~/lib/cron/jquery-cron.js"></script>
+    </environment>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var faultType = @Model.FaultType;
+            var cronExpression = $("#CronExpression").val();
+
+            if (cronExpression === "" || faultType == true) {
+                cronExpression = "0 * * * *";
+            }
+
+            $("#easy_cron").cron({
+                initial: cronExpression,
+                useGentleSelect: true,
+                onChange: function () {
+                    var cronField = $("#CronExpression");
+                    var newExpression = $(this).cron("value");
+                    cronField.val(newExpression);
+                }
+            });
+
+            $("#deleteBtn").click(function (e) {
+                if (confirm("Are you sure you want to delete this reminder? This cannot be undone.")) {
+                    $("#deleteForm").submit();
+                }
+            });
+
+        });
+    </script>
+}
