small adjustments and initial post method for global settings of moderation module

--- a/src/Volvox.Helios.Web/Views/Moderation/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Moderation/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Volvox.Helios.Web.Models.Moderation.ModerationGlobal
 @{
     Layout = null;
 }
@@ -11,6 +11,5 @@
     <title>Moderator</title>
 </head>
 <body>
-    Moderator
 </body>
 </html>
